--- a/App_GlobalResources/Common.resx
+++ b/App_GlobalResources/Common.resx
@@ -154,7 +154,7 @@
     <comment>make sure this lines up with row 5 in the status table</comment>
   </data>
   <data name="Contact" xml:space="preserve">
-    <value>Contact Administration</value>
+    <value>Contact</value>
     <comment>main menu</comment>
   </data>
   <data name="Dashboard" xml:space="preserve">
